--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 03:29:00 PM</p>
+    <p class="lastupdate">09/06/2020 03:34:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">115.9&#176;F</td>
+        <td class="data">116.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">115.9&#176;F</td>
+        <td class="data">116.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">115.9&#176;F</td>
+        <td class="data">116.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.4&#176;F</td>
+        <td class="data">48.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">12%</td>
+        <td class="data">11%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.825 inHg (-0.078)</td>
+        <td class="data">29.821 inHg (-0.084)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph NNE (22&#176;)</td>
+        <td class="data">1 mph NE (45&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">87.8&#176;F</td>
+        <td class="data">88.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,32 +153,32 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:27:58 PM">
-            115.9</span><br/>
+          <span title="03:32:14 PM">
+            116.1</span><br/>
           <span title="07:04:11 AM">
             67.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:27:58 PM (Sunday)">
-            115.9</span><br/>
+          <span title="03:32:14 PM (Sunday)">
+            116.1</span><br/>
           <span title="07:04:11 AM (Sunday)">
             67.4</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/06/2020 03:27:58 PM">
-            115.9</span><br/>
+          <span title="09/06/2020 03:32:14 PM">
+            116.1</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
         <td class="data new_row hilo_year">
-          <span title="09/06/2020 03:27:58 PM">
-            115.9</span><br/>
+          <span title="09/06/2020 03:32:14 PM">
+            116.1</span><br/>
           <span title="07/03/2020 05:53:04 AM">
             46.3</span>
         </td>
         <td class="data new_row hilo_rainyear">
-          <span title="09/06/2020 03:27:58 PM">
-            115.9</span><br/>
+          <span title="09/06/2020 03:32:14 PM">
+            116.1</span><br/>
           <span title="07/03/2020 05:53:04 AM">
             46.3</span>
         </td>
@@ -187,24 +187,24 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="03:27:58 PM" class="hival">
-            115.9</span>
+          <span title="03:32:14 PM" class="hival">
+            116.1</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:27:58 PM (Sunday)" class="hival">
-            115.9</span>
+          <span title="03:32:14 PM (Sunday)" class="hival">
+            116.1</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/06/2020 03:27:58 PM" class="hival">
-            115.9</span>
+          <span title="09/06/2020 03:32:14 PM" class="hival">
+            116.1</span>
         </td>
         <td class="data new_row hilo_year">
-          <span title="09/06/2020 03:27:58 PM" class="hival">
-            115.9</span>
+          <span title="09/06/2020 03:32:14 PM" class="hival">
+            116.1</span>
         </td>
         <td class="data new_row hilo_rainyear">
-          <span title="09/06/2020 03:27:58 PM" class="hival">
-            115.9</span>
+          <span title="09/06/2020 03:32:14 PM" class="hival">
+            116.1</span>
         </td>
         <td class="units">&#176;F</td>
       </tr>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:26:02 PM">
-            87.8</span><br/>
+          <span title="03:33:02 PM">
+            88.0</span><br/>
           <span title="07:46:01 AM">
             77.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:26:02 PM (Sunday)">
-            87.8</span><br/>
+          <span title="03:33:02 PM (Sunday)">
+            88.0</span><br/>
           <span title="07:46:01 AM (Sunday)">
             77.5</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">5 days, 0 hours, 42 minutes</td>
+      <td class="data">5 days, 0 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">5 days, 0 hours, 42 minutes</td>
+      <td class="data">5 days, 0 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
