--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 03:44:00 PM</p>
+    <p class="lastupdate">09/06/2020 03:49:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,15 +50,15 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">116.2&#176;F</td>
+        <td class="data">116.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">116.2&#176;F</td>
+        <td class="data">116.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">116.2&#176;F</td>
+        <td class="data">116.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.819 inHg (-0.084)</td>
+        <td class="data">29.819 inHg (-0.081)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph N (0&#176;)</td>
+        <td class="data">1 mph NE (45&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">88.4&#176;F</td>
+        <td class="data">88.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -305,20 +305,20 @@
         <td class="data new_row hilo_day">
           <span title="09:59:02 AM">
             29.954</span><br/>
-          <span title="03:41:02 PM">
-            29.818</span>
+          <span title="03:45:02 PM">
+            29.817</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="03:41:02 PM (Sunday)">
-            29.818</span>
+          <span title="03:45:02 PM (Sunday)">
+            29.817</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
             30.063</span><br/>
-          <span title="09/06/2020 03:41:02 PM">
-            29.818</span>
+          <span title="09/06/2020 03:45:02 PM">
+            29.817</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="07/04/2020 08:07:00 AM">
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:43:02 PM">
-            88.4</span><br/>
+          <span title="03:48:02 PM">
+            88.7</span><br/>
           <span title="07:46:01 AM">
             77.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:43:02 PM (Sunday)">
-            88.4</span><br/>
+          <span title="03:48:02 PM (Sunday)">
+            88.7</span><br/>
           <span title="07:46:01 AM (Sunday)">
             77.5</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">5 days, 0 hours, 57 minutes</td>
+      <td class="data">5 days, 1 hour, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">5 days, 0 hours, 57 minutes</td>
+      <td class="data">5 days, 1 hour, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
