--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 03:49:00 PM</p>
+    <p class="lastupdate">09/06/2020 03:54:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">116.3&#176;F</td>
+        <td class="data">116.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">116.3&#176;F</td>
+        <td class="data">116.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">116.3&#176;F</td>
+        <td class="data">116.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">48.3&#176;F</td>
+        <td class="data">48.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.819 inHg (-0.081)</td>
+        <td class="data">29.818 inHg (-0.081)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NE (45&#176;)</td>
+        <td class="data">1 mph E (90&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">88.7&#176;F</td>
+        <td class="data">89.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">36%</td>
+        <td class="data">35%</td>
       </tr>
     </tbody>
   </table>
@@ -153,32 +153,32 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:36:10 PM">
-            116.3</span><br/>
+          <span title="03:53:26 PM">
+            116.9</span><br/>
           <span title="07:04:11 AM">
             67.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:36:10 PM (Sunday)">
-            116.3</span><br/>
+          <span title="03:53:26 PM (Sunday)">
+            116.9</span><br/>
           <span title="07:04:11 AM (Sunday)">
             67.4</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/06/2020 03:36:10 PM">
-            116.3</span><br/>
+          <span title="09/06/2020 03:53:26 PM">
+            116.9</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
         <td class="data new_row hilo_year">
-          <span title="09/06/2020 03:36:10 PM">
-            116.3</span><br/>
+          <span title="09/06/2020 03:53:26 PM">
+            116.9</span><br/>
           <span title="07/03/2020 05:53:04 AM">
             46.3</span>
         </td>
         <td class="data new_row hilo_rainyear">
-          <span title="09/06/2020 03:36:10 PM">
-            116.3</span><br/>
+          <span title="09/06/2020 03:53:26 PM">
+            116.9</span><br/>
           <span title="07/03/2020 05:53:04 AM">
             46.3</span>
         </td>
@@ -187,24 +187,24 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="03:36:10 PM" class="hival">
-            116.3</span>
+          <span title="03:53:26 PM" class="hival">
+            116.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:36:10 PM (Sunday)" class="hival">
-            116.3</span>
+          <span title="03:53:26 PM (Sunday)" class="hival">
+            116.9</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/06/2020 03:36:10 PM" class="hival">
-            116.3</span>
+          <span title="09/06/2020 03:53:26 PM" class="hival">
+            116.9</span>
         </td>
         <td class="data new_row hilo_year">
-          <span title="09/06/2020 03:36:10 PM" class="hival">
-            116.3</span>
+          <span title="09/06/2020 03:53:26 PM" class="hival">
+            116.9</span>
         </td>
         <td class="data new_row hilo_rainyear">
-          <span title="09/06/2020 03:36:10 PM" class="hival">
-            116.3</span>
+          <span title="09/06/2020 03:53:26 PM" class="hival">
+            116.9</span>
         </td>
         <td class="units">&#176;F</td>
       </tr>
@@ -305,20 +305,20 @@
         <td class="data new_row hilo_day">
           <span title="09:59:02 AM">
             29.954</span><br/>
-          <span title="03:45:02 PM">
-            29.817</span>
+          <span title="03:52:02 PM">
+            29.816</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="03:45:02 PM (Sunday)">
-            29.817</span>
+          <span title="03:52:02 PM (Sunday)">
+            29.816</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
             30.063</span><br/>
-          <span title="09/06/2020 03:45:02 PM">
-            29.817</span>
+          <span title="09/06/2020 03:52:02 PM">
+            29.816</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="07/04/2020 08:07:00 AM">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          11
+          12
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          11
+          12
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:48:02 PM">
-            88.7</span><br/>
+          <span title="03:53:02 PM">
+            89.1</span><br/>
           <span title="07:46:01 AM">
             77.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:48:02 PM (Sunday)">
-            88.7</span><br/>
+          <span title="03:53:02 PM (Sunday)">
+            89.1</span><br/>
           <span title="07:46:01 AM (Sunday)">
             77.5</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">5 days, 1 hour, 2 minutes</td>
+      <td class="data">5 days, 1 hour, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">5 days, 1 hour, 2 minutes</td>
+      <td class="data">5 days, 1 hour, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
