--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 03:54:00 PM</p>
+    <p class="lastupdate">09/06/2020 03:59:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">116.9&#176;F</td>
+        <td class="data">117.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">116.9&#176;F</td>
+        <td class="data">117.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">116.9&#176;F</td>
+        <td class="data">117.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">48.8&#176;F</td>
+        <td class="data">49.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.818 inHg (-0.081)</td>
+        <td class="data">29.816 inHg (-0.077)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph E (90&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">89.1&#176;F</td>
+        <td class="data">89.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,32 +153,32 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:53:26 PM">
-            116.9</span><br/>
+          <span title="03:58:54 PM">
+            117.2</span><br/>
           <span title="07:04:11 AM">
             67.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:53:26 PM (Sunday)">
-            116.9</span><br/>
+          <span title="03:58:54 PM (Sunday)">
+            117.2</span><br/>
           <span title="07:04:11 AM (Sunday)">
             67.4</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/06/2020 03:53:26 PM">
-            116.9</span><br/>
+          <span title="09/06/2020 03:58:54 PM">
+            117.2</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
         <td class="data new_row hilo_year">
-          <span title="09/06/2020 03:53:26 PM">
-            116.9</span><br/>
+          <span title="09/06/2020 03:58:54 PM">
+            117.2</span><br/>
           <span title="07/03/2020 05:53:04 AM">
             46.3</span>
         </td>
         <td class="data new_row hilo_rainyear">
-          <span title="09/06/2020 03:53:26 PM">
-            116.9</span><br/>
+          <span title="09/06/2020 03:58:54 PM">
+            117.2</span><br/>
           <span title="07/03/2020 05:53:04 AM">
             46.3</span>
         </td>
@@ -187,24 +187,24 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="03:53:26 PM" class="hival">
-            116.9</span>
+          <span title="03:58:54 PM" class="hival">
+            117.2</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:53:26 PM (Sunday)" class="hival">
-            116.9</span>
+          <span title="03:58:54 PM (Sunday)" class="hival">
+            117.2</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/06/2020 03:53:26 PM" class="hival">
-            116.9</span>
+          <span title="09/06/2020 03:58:54 PM" class="hival">
+            117.2</span>
         </td>
         <td class="data new_row hilo_year">
-          <span title="09/06/2020 03:53:26 PM" class="hival">
-            116.9</span>
+          <span title="09/06/2020 03:58:54 PM" class="hival">
+            117.2</span>
         </td>
         <td class="data new_row hilo_rainyear">
-          <span title="09/06/2020 03:53:26 PM" class="hival">
-            116.9</span>
+          <span title="09/06/2020 03:58:54 PM" class="hival">
+            117.2</span>
         </td>
         <td class="units">&#176;F</td>
       </tr>
@@ -271,20 +271,20 @@
         <td class="data new_row hilo_day">
           <span title="07:12:31 AM">
             49</span><br/>
-          <span title="03:05:44 PM">
-            11</span>
+          <span title="03:56:08 PM">
+            10</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:12:31 AM (Sunday)">
             49</span><br/>
-          <span title="03:05:44 PM (Sunday)">
-            11</span>
+          <span title="03:56:08 PM (Sunday)">
+            10</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 06:37:07 AM">
             93</span><br/>
-          <span title="09/05/2020 03:07:18 PM">
-            11</span>
+          <span title="09/06/2020 03:56:08 PM">
+            10</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="06/21/2020 07:07:00 AM">
@@ -305,20 +305,20 @@
         <td class="data new_row hilo_day">
           <span title="09:59:02 AM">
             29.954</span><br/>
-          <span title="03:52:02 PM">
-            29.816</span>
+          <span title="03:56:02 PM">
+            29.815</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="03:52:02 PM (Sunday)">
-            29.816</span>
+          <span title="03:56:02 PM (Sunday)">
+            29.815</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
             30.063</span><br/>
-          <span title="09/06/2020 03:52:02 PM">
-            29.816</span>
+          <span title="09/06/2020 03:56:02 PM">
+            29.815</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="07/04/2020 08:07:00 AM">
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:53:02 PM">
-            89.1</span><br/>
+          <span title="03:57:02 PM">
+            89.3</span><br/>
           <span title="07:46:01 AM">
             77.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:53:02 PM (Sunday)">
-            89.1</span><br/>
+          <span title="03:57:02 PM (Sunday)">
+            89.3</span><br/>
           <span title="07:46:01 AM (Sunday)">
             77.5</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">5 days, 1 hour, 7 minutes</td>
+      <td class="data">5 days, 1 hour, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">5 days, 1 hour, 7 minutes</td>
+      <td class="data">5 days, 1 hour, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
