--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 03:59:00 PM</p>
+    <p class="lastupdate">09/06/2020 04:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">117.2&#176;F</td>
+        <td class="data">117.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">117.2&#176;F</td>
+        <td class="data">117.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">117.2&#176;F</td>
+        <td class="data">117.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">49.0&#176;F</td>
+        <td class="data">46.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">11%</td>
+        <td class="data">10%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.816 inHg (-0.077)</td>
+        <td class="data">29.818 inHg (-0.069)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">89.3&#176;F</td>
+        <td class="data">89.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,32 +153,32 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:58:54 PM">
-            117.2</span><br/>
+          <span title="04:03:10 PM">
+            117.4</span><br/>
           <span title="07:04:11 AM">
             67.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:58:54 PM (Sunday)">
-            117.2</span><br/>
+          <span title="04:03:10 PM (Sunday)">
+            117.4</span><br/>
           <span title="07:04:11 AM (Sunday)">
             67.4</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/06/2020 03:58:54 PM">
-            117.2</span><br/>
+          <span title="09/06/2020 04:03:10 PM">
+            117.4</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
         <td class="data new_row hilo_year">
-          <span title="09/06/2020 03:58:54 PM">
-            117.2</span><br/>
+          <span title="09/06/2020 04:03:10 PM">
+            117.4</span><br/>
           <span title="07/03/2020 05:53:04 AM">
             46.3</span>
         </td>
         <td class="data new_row hilo_rainyear">
-          <span title="09/06/2020 03:58:54 PM">
-            117.2</span><br/>
+          <span title="09/06/2020 04:03:10 PM">
+            117.4</span><br/>
           <span title="07/03/2020 05:53:04 AM">
             46.3</span>
         </td>
@@ -187,24 +187,24 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="03:58:54 PM" class="hival">
-            117.2</span>
+          <span title="04:03:10 PM" class="hival">
+            117.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:58:54 PM (Sunday)" class="hival">
-            117.2</span>
+          <span title="04:03:10 PM (Sunday)" class="hival">
+            117.4</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/06/2020 03:58:54 PM" class="hival">
-            117.2</span>
+          <span title="09/06/2020 04:03:10 PM" class="hival">
+            117.4</span>
         </td>
         <td class="data new_row hilo_year">
-          <span title="09/06/2020 03:58:54 PM" class="hival">
-            117.2</span>
+          <span title="09/06/2020 04:03:10 PM" class="hival">
+            117.4</span>
         </td>
         <td class="data new_row hilo_rainyear">
-          <span title="09/06/2020 03:58:54 PM" class="hival">
-            117.2</span>
+          <span title="09/06/2020 04:03:10 PM" class="hival">
+            117.4</span>
         </td>
         <td class="units">&#176;F</td>
       </tr>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:57:02 PM">
-            89.3</span><br/>
+          <span title="04:03:02 PM">
+            89.6</span><br/>
           <span title="07:46:01 AM">
             77.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:57:02 PM (Sunday)">
-            89.3</span><br/>
+          <span title="04:03:02 PM (Sunday)">
+            89.6</span><br/>
           <span title="07:46:01 AM (Sunday)">
             77.5</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">5 days, 1 hour, 12 minutes</td>
+      <td class="data">5 days, 1 hour, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">5 days, 1 hour, 12 minutes</td>
+      <td class="data">5 days, 1 hour, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
